<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crisis Trivia</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_panel"></string>
    <string name="question">Question\nOne\nTwo</string>
    <string name="resume_last_game">Resume Last Game</string>
    <string name="rank">Rank</string>
    <string name="answer1">Answer1\n\n</string>
    <string name="answer2">Answer2\n\n</string>
    <string name="answer3">Answer3\n\n</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="start_new_game">Start New Game</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="game_over">Game Over</string>
    <string name="level_2">Loading\nLevel 2</string>
    <string name="level_3">Loading\nLevel 3</string>
    <string name="tap">Tap to continue</string>
    <string name="level_flash">Loading\nFlash round!</string>
    <string name="congratulations">Congratulations</string>
    <string name="score_">"Score: "</string>
    <string name="QuestionsNo">Questions Answered: </string>
    <string name="QuestionsOK">Correct Answers: </string>
    <string name="this_question_">"This question: "</string>
    <string name="next_question">Next Question</string>
    <string name="support_string">Support this app by tapping on the ads!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="text_activity_help">Crisis Trivia is a game divided into levels, the further you get, the more difficult it is.\nLevel 1 is composed of 4 questions, level 2 of 3 questions, level 3 of 2 questions, and then there is a flash level with a question drawn from each of the three difficulty levels.\nYou can fail up to two out of four questions in level 1, two out of three questions in level 2, one question out of two in level 3, and lastly one question out of three in the flash level.\nIf you feel there should be a question important enough for your co-citizens to know, you can send it to me with the menu option so that it can be included in future versions.Please support this app by clicking on the ads or by purchasing the ad-free version.\nEnjoy!</string>
    <string name="menu_newquestion">Send new question</string>
    <string name="menu_reset">Reset rank</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_email_question">EmailQuestionActivity</string>
    <string name="statement">Question\nStatement</string>
    <string name="correct_a">Correct\nAnswer</string>
    <string name="incorrect_a">Incorrect\nAnswer</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

</resources>