<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="ignore:http://schemas.android.com/apk/res/android"
    android:id="@+id/questions_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:foregroundGravity="center_vertical|center_horizontal|center|clip_vertical|clip_horizontal" >

    <ImageView
        android:id="@+id/floatingMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|fill_horizontal|clip_vertical|start"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="20sp"
            app:tools="HardcodedText" />

        <LinearLayout
            android:id="@+id/answersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/answerButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@android:color/transparent"
                android:text="@string/answer1"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/answerButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@android:color/transparent"
                android:text="@string/answer2"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/answerButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@android:color/transparent"
                android:text="@string/answer3"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>