<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".EmailQuestionActivity" >

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxHeight="60dp"
        android:minHeight="60dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxHeight="60dp"
        android:minHeight="60dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.69"
            android:text="@string/send" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/statement"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#EEEEEE"
        android:width="100dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxHeight="60dp"
        android:minHeight="60dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="2dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxHeight="70dp"
        android:minHeight="70dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:text="@string/incorrect_a"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#EEEEEE"
        android:width="100dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toLeftOf="@+id/editText4"
        android:text="@string/incorrect_a"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#EEEEEE"
        android:width="100dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/correct_a"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#EEEEEE"
        android:width="100dp" />
    
    <com.google.ads.AdView
        android:id="@+id/adviewemail"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a150cf4c8c18117"
        ads:loadAdOnCreate="true" />
    
</RelativeLayout>